# opa-bundle-builder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  daily_security.yml  reviewdog.yaml
src/: main.rs
