[package]
authors = ["Stackable GmbH <info@stackable.tech>"]
description = "Stackable Bundle Builder for OPA"
edition = "2021"
license = "OSL-3.0"
name = "stackable-opa-bundle-builder"
repository = "https://github.com/stackabletech/opa-bundle-builder"
version = "1.1.1"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.64.0" }

futures = { version = "0.3", features = ["compat"] }
semver = "1.0"
snafu = "0.8"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }
tracing = "0.1"
pin-project = "1.0"
warp = "0.3"
tar = "0.4"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
