[package]
authors = ["Stackable GmbH <info@stackable.tech>"]
description = "Stackable Bundle Builder for OPA"
edition = "2021"
license = "OSL-3.0"
name = "stackable-opa-bundle-builder"
repository = "https://github.com/stackabletech/opa-bundle-builder"
version = "1.1.2"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.67.1" }

flate2 = "1.0"
futures = { version = "0.3", features = ["compat"] }
pin-project = "1.1"
semver = "1.0"
snafu = "0.8"
strum = { version = "0.26", features = ["derive"] }
tar = "0.4"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
warp = "0.3"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
